# stock_agent_ai

./: .gitignore  BTC-USD_lstm_model.keras  BTC-USD_price.csv  README.md  btc_lstm_model.h5  full_hybrid_model.pt  fuzzy_model.pt  pyproject.toml  requirements.in  requirements.txt  run.sh  set_up_project.py
JUST_EXTRA/: Fuzzy_Neural_Model.py  companies.yaml  fetch_halasan_template.py  stocks_halasan.csv  test.py
data/raw/: fundamentals_quarterly.csv  macro_index.csv  news_sentiment.csv  price_daily.csv
logs/: system.log.2025-11-02  system.log.2025-11-03  system.log.2025-11-06  system.log.2025-11-07  system.log.2025-11-08  system.log.2025-11-09  update_log.log.2025-11-01
notebooks/: duckdbAccess.ipynb  duckdbAccessingMethod.md
sql/: createFeatureDB.sql  test.py
src/: main.py
src/analysts/: base_analyst.py  business_analyst.py  fundamental_analyst.py  macro_analyst.py  news_media_analyst.py  stock_data_analyst.py
src/config/: macro_indices_dict.yaml  schema_macro.py
src/core/: db_handler.py  db_updater.py  db_updater_utils.py  decision_maker.py  investor.py  status_logger.py
src/scheduler/: cron_job.sh
src/utils/: fetch_FED_categories.py  fetch_macro.py  fetch_newsapi.py  fetch_yfinance.py
